# unsplash-pydantic

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  test.yml
tests/: conftest.py  test_client.py  test_models.py
unsplash/: __init__.py  _client_base.py  client.py  errors.py
unsplash/models/: __init__.py  _base.py  collection.py  photo.py  search.py  user.py
unsplash/resources/: __init__.py  collections.py  photos.py  search.py  users.py
