[tool.poetry]
name = "unsplash-pydantic"
version = "0.1.0"
description = "A modern, Async-ready Unsplash API client for Python."
authors = ["Shih-Wei Lo <shihwei@gmail.com>"]
readme = "README.md"
packages = [{include = "unsplash"}]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.28.1"
pydantic = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^1.2.0"
respx = "^0.20.0"
ruff = "^0.3.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
